<resources>
    <string name="app_name">Sportspal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sportspal</string>
    <string name="nav_header_subtitle">The best app for sports</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sport">Sports</string>
    <string name="menu_athlete">Athletes</string>
    <string name="menu_firebase">Matches</string>
    <string name="menu_team">Teams</string>
    <string name="menu_match">Matches</string>
    <string name="menu_about">About</string>
    <string name="about_paragraph">This app is really bad Don\'t use it!</string>
    <string name="about_participants">  * Στέλιος Μάνιος (akismanios@gmail.com)\n
                                        * Γεώργιος Τσαλίμαλμας (georgetsali1999@gmail.com)\n
                                        * Συράκης Σαράντης (ssarantis2@gmail.com)</string>
    <string name="logo">Logo</string>
    <string name="sport_name">Baseball</string>
    <string name="sport_gender">Male</string>

    <string name="match_id">id</string>
    <string name="match_date">10/12/2022</string>
    <string name="match_country">greece</string>

    <string name="athlete_first_name">jon</string>
    <string name="athlete_surname">doe</string>
    <string name="athlete_country">greece</string>

    <string name="team_name">team_name</string>
    <string name="team_city">team_city</string>
    <string name="team_country">team_country</string>
    <string name="menu_room_queries">Room Queries</string>
    <string name="menu_firebase_queries">Firebase Queries</string>
</resources>