<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/ic_baseline_sports_24"
            android:title="@string/menu_sport" />
        <item
            android:id="@+id/nav_athlete"
            android:icon="@drawable/ic_baseline_sports_handball_24"
            android:title="@string/menu_athlete" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_baseline_sports_kabaddi_24"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/add_match"
            android:icon="@drawable/ic_baseline_sports_handball_24"
            android:title="@string/menu_firebase" />

    </group>
    <group>
        <item
            android:id="@+id/nav_room_queries"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_room_queries" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>
</menu>