<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/match_id_recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/match_id"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/match_date_recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/match_id_recyclerView"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/match_date"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/match_country_recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/match_date_recyclerView"
            android:text="@string/match_country"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>